--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,98 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+}
+main{
+  padding: 36px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header{
+  display: flex;
+  align-items: center;
+  height: 65px;
+  background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
+  color: white;
+  padding: 20px;
+}
+
+.header-image{
+  height: 100%;
+  margin-right: 6px;
+
+}
+
+.header-title{
+  font-size: 20px;
+  margin-right: auto;
+}
+
+.form{
+  width: 50%;
+  margin: auto;
+  display: grid;
+  grid-template: 40px 40px / 1fr 1fr ;
+  gap:17px;
+}
+
+.form-input{
+
+  border-radius: 6px;
+  border: 1px solid #D5D4D8;
+  text-indent: 5px;
+  align-items: center;
+}
+
+.form-button{
+  grid-column: 1 / -1;
+  border-radius: 6px;
+  background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+  color: white;
+}
+
+.meme{
+  position: relative;
+}
+
+.meme-image{
+  max-width: 100%;
+  height: 500px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 36px;
+  
+}
+
+.meme-text{
+  position: absolute;
+    width: 80%;
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 15px 0;
+    padding: 0 5px;
+    font-family: impact, sans-serif;
+    font-size: 2em;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 1px;
+    text-shadow:
+        2px 2px 0 #000,
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        0 2px 0 #000,
+        2px 0 0 #000,
+        0 -2px 0 #000,
+        -2px 0 0 #000,
+        2px 2px 5px #000;
+
+}
+
+.top{
+  top: 0;
+}
+.bottom{
+  bottom: 0;
 }
